# DAL_Spirits

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
assets/: cache.worker.js  index.html  spirits.csv
assets/styles/: home.css  index.css  spirit-details.css  spirits.css
dal_spirits-proc/: Cargo.toml
dal_spirits-proc/src/: lib.rs
scripts/: bundle.js  dev.js
src/: components.rs  index.ts  main.rs  models.rs  router.rs  utils.rs
src/components/: app.rs  home.rs  spirit_details.rs
src/model/: Spirit.ts  SpiritGraph.ts  database.ts  spiritMenu.ts
src/models/: Spirit.ts  SpiritGraph.ts  spiritMenu.ts
src/models/database/: DataStrategy.ts
src/models/database/strategies/: local.ts  online.ts
src/util/: csv.ts  features.ts  fetch.ts
static/data/: spirits.csv
static/views/: index.css  index.html
