[package]
name = "dal_spirits"
version = "1.0.0"
description = "Bundle webpage about 'Date A Live: Spirit Pledge' characters"
authors = ["Dragonink (https://github.com/Dragonink)"]
edition = "2021"
publish = false
autobins = false
[lib]
path = "src/main.rs"
crate-type = ["cdylib"]

[dependencies]
dal_spirits-proc = { path = "dal_spirits-proc" }
console_error_panic_hook = "0"
constcat = "0"
enumflags2 = "0"
js-sys = "0"
once_cell = "1"
regex = "1"
serde_variant = "0"
serdenom_csv = { git = "https://github.com/Dragonink/serdenom_csv" }
sycamore-router = "0.8.0-beta.5"
wasm-bindgen-futures = "0"
wee_alloc = "0"
[dependencies.either]
version = "1"
features = ["serde"]
[dependencies.futures]
version = "0"
default-features = false
[dependencies.serde]
version = "1"
features = ["derive"]
[dependencies.sycamore]
version = "0.8.0-beta.5"
features = ["builder", "suspense"]
[dependencies.wasm-bindgen]
version = "0"
features = ["serde-serialize"]
[dependencies.web-sys]
version = "0"
features = [
	"console",
	"Event",
	"EventTarget",
	"Headers",
	"History",
	"HtmlInputElement",
	"Location",
	"Navigator",
	"Performance",
	"PerformanceEntry",
	"PerformanceMeasure",
	"Request",
	"RequestInit",
	"Response",
	"ServiceWorker",
	"ServiceWorkerContainer",
	"ServiceWorkerRegistration",
	"Window",
]

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
codegen-units = 1
